# jaxili

./: .buildinfo  .buildinfo.bak  .readthedocs.yml  Dockerfile  LICENSE  README.md  about.html  compressor.html  conda_env.yml  genindex.html  index.html  jaxili.compressor.html  jaxili.html  jaxili.inference.html  jaxili.inference.nle.html  jaxili.inference.npe.html  jaxili.loss.html  jaxili.model.html  jaxili.posterior.base_posterior.html  jaxili.posterior.direct_posterior.html  jaxili.posterior.html  jaxili.posterior.mcmc_posterior.html  jaxili.train.html  jaxili.utils.html  jaxili.validation.html  loss.html  model.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  train.html  utils.html  validation.html
.doctrees/: about.doctree  compressor.doctree  environment.pickle  index.doctree  jaxili.compressor.doctree  jaxili.doctree  jaxili.inference.doctree  jaxili.inference.nle.doctree  jaxili.inference.npe.doctree  jaxili.loss.doctree  jaxili.model.doctree  jaxili.posterior.base_posterior.doctree  jaxili.posterior.direct_posterior.doctree  jaxili.posterior.doctree  jaxili.posterior.mcmc_posterior.doctree  jaxili.train.doctree  jaxili.utils.doctree  jaxili.validation.doctree  loss.doctree  model.doctree  modules.doctree  train.doctree  utils.doctree  validation.doctree
.doctrees/manual/: index.doctree  installation.doctree
.github/workflows/: cd.yml  ci.yml
_modules/: compressor.html  index.html  loss.html  model.html  train.html  utils.html
_modules/jaxili/: compressor.html  loss.html  model.html  train.html  utils.html
_sources/: about.md  compressor.rst  index.rst  index.rst.txt  jaxili.compressor.rst  jaxili.inference.nle.rst  jaxili.posterior.direct_posterior.rst  jaxili.posterior.mcmc_posterior.rst  jaxili.train.rst  modules.rst
assets/: normalizingflows
docs/source/: conf.py  jaxili.inference.npe.rst  jaxili.inference.rst  jaxili.loss.rst  jaxili.posterior.base_posterior.rst  jaxili.rst  jaxili.validation.rst
jaxili/: __init__.py  __version__.py  compressor.py  loss.py  model.py  train.py  utils.py  validation.py
jaxili/inference/: __init__.py  nle.py  npe.py
jaxili/inventory/: func_dict.py
jaxili/posterior/: __init__.py  base_posterior.py  direct_posterior.py  mcmc_posterior.py
jaxili/tests/: test_gpu.py  test_nle.py  test_nn.py  test_npe.py  test_posterior.py  test_utils.py
manual/: index.html  installation.html
normflow/: distribution.py  model.py  train.py  utils.py
notebooks/: Hodgkin-Huxley _example.ipynb  getting_started_sbi.ipynb  jaxili_tutorial.ipynb  jaxili_tutorial_gap.ipynb  npe_validation.ipynb  power_spectrum_jc.ipynb  sbibm_jax.ipynb  test_maf.ipynb  test_mdn.ipynb  test_real_nvp.ipynb  tuto_jax_npe_inference.ipynb
notebooks/ps_dataset/: test_set.pt  train_set.pt  val_set.pt
(+860 files in other folders)
