[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxili"
version = "0.0.1"
authors = [{name="Sacha Guerrini"}] # email=""
description = "This package provides tools to execute and implement Implicit Likelihood Inference tools in JAX."
dependencies = ["numpy", "jax"]
readme = "README.md"
requires-python = ">=3.10, <3.11"
urls = {Repository="https://github.com/sachaguer/jaxili"} # Documentation=""

[tool.setuptools]
packages = ["jaxili"]